--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "caucrawl",
+  "name": "cau.ac.kr",
   "version": "1.0.0",
   "description": "library and utillity for crawlling cau.ac.kr",
   "scripts": {
