--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "commander": "^5.1.0",
     "csv-stringify": "^5.5.0",
     "decode-html": "^2.0.0",
-    "html-entities": "^1.3.1",
-    "tsc": "^1.20150623.0",
-    "typescript": "^3.9.3"
+    "html-entities": "^1.3.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.9.4"
   }
 }
