Non-criticial minor typo fix

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "tsc"
   },
   "bin": {
-    "caucrawl": "./dist/crawller/index.js"
+    "caucrawl": "dist/crawller/index.js"
   },
   "main": "dist/cau.js",
   "author": "LiteHell",
